# FixFiction

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prebuilt  README.md  STARTUP.md  compose.host-postgres.yml  compose.local-postgres.yml  compose.yml  docker-entrypoint.sh  license.md  readme.md  rust-toolchain.toml
.sqlx/: query-0af30c947df7eb7a477cee516fca85be2d16021c1003c39f7200b6ae74b0c487.json  query-10d73b58f7735412212b5f732f9751db353513c9c107466c5b53d1d9ad836dd6.json  query-1746997f95d4b425b6a05c25175c0b7028528ce7072577b8550d16687ef9d63b.json  query-1db665142cab486f8a9bf81cdb0e67dccbef537425c47ad60812681b3d083b7a.json  query-1ea661a7eda13fd88cf564ebe2435ea217cd5ba7bb0feef0ffa6ef69fb5ab4c6.json  query-25969f4e5102469a34e772b1459148a434d9a83af29a58affd03617d2bc8bbdc.json  query-26d71dcb2a17d9ed0aad2433853bd8bb2dadb374c29babfaf4867151d18e792b.json  query-2a7198525eb492fc8e6e337450342203da7000454bf370c8223cebe2defb7695.json  query-2ba6612755ce0b574d398b1229ce0d1abd054ee9dc790c2a1ba48e1ecced55a2.json  query-3042d792b37adcd82841ebfce160f9995b3d17a78e9bf620c04eac361de8b82b.json  query-33b3bb16c8975663f322148f14216f9731a8b4ab751692cf6927d13ae5914ed7.json  query-3cfa10adaf9512fc632f75c9288914e53e9c656ca831815a534efb43cb53b5ad.json  query-3f3640d751e0b9d54c3c24cf9110103f607fedff5a64f541adeb7fd9c2ef9a0a.json  query-4c057ddbab0a8bda268e56fe4dbd9c2de197561f81e3044197f50b11b42bde97.json  query-5ae07ea6d5b7fde6b4cc5d72a15db115683808ea5eeade4fe37095060e3289e6.json  query-5b0c8ab7068c0f86ec578c2b6e284c2bb087e034de0f24f061f3fc0c4415339c.json  query-5b5ea2bd73a2d9f1cbb46f88f57f36ff5e189b7e31d00082c6078d7e15f82615.json  query-69431756d4bfdc39fcbfb23a9a2801881215269fc333414d31e6eb979530513e.json  query-6bace3f64e752b1f2c48b5e6ac1b0fe2bf9ab9ffa929b0632fa9a6dc97ca19e4.json  query-7e2f218c77d31b2d921fb981e740fa7cc33a5383314f34d7e6aeb5d22d70d3f3.json  query-80d506b998f451ece2756028606d6fad30a67aaa18162efda54c0b920c183a05.json  query-8d9bad71cd77638dfe256843d5dcee3f5a31aa438e04be7624f3199abcc7e8aa.json  query-94c8ad8aeab0c70d3d4fb45e98057989b8161eb869a80ef2e379e47995397a74.json  query-962ed5ec7a059af29261c0bcd8a773f5ae839345cfc489628de4deb1cced4078.json  query-9c38593f41f6157c74123a81d6e39a1893f106238e65f6375a0087d866de453e.json  query-a2024e052a933102ac64820477c2f55d6f6bac2e6e76a01626f692e7a6097ae9.json  query-a3d2b8cb4b2ab069e71f904d71fdaf744015fce60a5c04a516a4f02ab089c269.json  query-ad7fdffbca23f4033e16bec091fc5fb13c3567e8acd2ae6fc16b594da2d84e10.json  query-adaebb282ab002aa23894803ab017ba3cd2f116c5036761891f559d27addca02.json  query-c6be280f001660ebed55c00e25d578927e9d283bf98816c062f61637455ab025.json  query-c8548d6cc5560ee6858d0b8b18c80447addac7d0e1f2493044bbc8bab1886efd.json  query-cc0d5e50616e9e794684ffb8b3afa804f395fa7cff65664fd217c1c3cf92e148.json  query-cc2a91d4741dbc0f7d941db43aa0928f5d7704f6147832e2964f5644a70fac7f.json  query-d41e99f38335e53df18967ca3f1b2fe7fa023cc112a5766179173a4929b9a7ee.json  query-d9515e6c629012e316ac5517cfa0329ca469e26c4f9aa7017d01922c66dbe94b.json  query-da04ebd722d1f340940dc99ba7feadff5ef84435e5cf60641f127f93eadb22fb.json  query-da8b2d6b99b223ff232754b1841f2a90563efb008108b3c712bf4e5a667660f4.json  query-f794d0bff6d5c16f423a9932fdde8f898b96d4ee8ac0fec089b0014a12e424f9.json  (+2 more)
(+72 files in other folders)
