[package]
name = "fixfiction"
version = "2.0.0"
description = "Service to fix FIMFiction embeds."
repository = "https://github.com/SilkRose/FixFiction"
authors = ["Silk Rose", "Meadowsys"]
edition = "2024"
license = "MIT"
publish = false

[dependencies]
actix-cors = { version = "0.7.1" }
actix-web = { version = "4.11.0" }
chrono = { version = "0.4.42" }
maud = { version = "0.27.0" }
pony = { git = "https://github.com/SilkRose/Pony" }
rand = { version = "0.9.2" }
regex = { version = "1.11.3" }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
sqlx = { version = "0.8.6", features = [
	"runtime-tokio",
	"tls-rustls",
	"postgres",
	"chrono",
] }
tokio = { version = "1.47.1", features = ["full"] }
url = { version = "2.5.7" }

[profile.dev]
opt-level = 0
debug-assertions = true
debug = true
incremental = true

[profile.release]
strip = true
opt-level = 3
debug-assertions = false
lto = true
codegen-units = 1
